// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`align.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
1. 123

---

11. 123

---

111. 123

---

1111. 123

---

11111. 123

---

1.  123

---

1.  123
2.  123

---

11. 123
1. 123

---

11. 123
1.  123

---

1. 123
2. 123
   1.   123
   2.   123

---

1.  123
2.  123
    1.   123
    2.   123

---

- 123
- 123
  1.  123
  2.  123

=====================================output=====================================
1. 123

---

11. 123

---

111. 123

---

1111. 123

---

11111. 123

---

1.  123

---

1.  123
2.  123

---

11. 123
1. 123

---

11. 123
1.  123

---

1. 123
2. 123
   1. 123
   2. 123

---

1.  123
2.  123
    1.  123
    2.  123

---

- 123
- 123
  1.  123
  2.  123

================================================================================
`;

exports[`checkbox.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
- [ ] this is a long long long long long long long long long long long long long long paragraph.
- [x] this is a long long long long long long long long long long long long long long paragraph.

=====================================output=====================================
- [ ] this is a long long long long long long long long long long long long long
      long paragraph.
- [x] this is a long long long long long long long long long long long long long
      long paragraph.

================================================================================
`;

exports[`codeblock.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
1. ol01

    \`\`\`js
    const a = 1;


    const b = 2;
    \`\`\`

2. ol02

    \`\`\`js
    const a = 1;


    const b = 2;
    \`\`\`

- ul01

    \`\`\`js
    const a = 1;


    const b = 2;
    \`\`\`

- ul02

    \`\`\`js
    const a = 1;


    const b = 2;
    \`\`\`

=====================================output=====================================
1. ol01

   \`\`\`js
   const a = 1;

   const b = 2;
   \`\`\`

2. ol02

   \`\`\`js
   const a = 1;

   const b = 2;
   \`\`\`

- ul01

  \`\`\`js
  const a = 1;

  const b = 2;
  \`\`\`

- ul02

  \`\`\`js
  const a = 1;

  const b = 2;
  \`\`\`

================================================================================
`;

exports[`combined-lists.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
* hello1

* hello2


* hello3

* hello4


* hello5

* hello6
=====================================output=====================================
- hello1

- hello2

- hello3

- hello4

- hello5

- hello6

================================================================================
`;

exports[`followed-by-indented-things.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
-    foo

    top level indented code block

---

-    foo

     list item text

---

   -    foo

       top level indented code block

---

 -  foo

        indented code block in bullet

---

1.    foo

     top level indented code block

---

1.    foo

      list item text

---

   1.    foo

        top level indented code block


---

  1.  foo

          indented code block in numbered item

---

-    [ ] foo

    top level indented code block

---

   - [ ]    foo

         indented code block in checkbox item

---

 -    item 1
 -    item 2

     top level indented code block

---

- item 1
    - item 1-1
    - item 1-2

    naive paragraph in item 1

---

   -    item 1
        - item 1-1
        - item 1-2

    top level indented code block

---


   -    item 1
        - item 1-1
        - item 1-2
   -    item 2

       top level indented code block

---

1. item 1
    1. item 1-1
    2. item 1-2

   naive paragraph in item 1

---

1. item 1
    1. item 1-1
    2. item 1-2
100. item 1

    top level indented code block

---

   -    item 1
        > quote

        text

    top level indented code block

---

   -    item 1
        -    item 1-1
        -    item 1-2

            indented code block

    top level indented code block

---

 -    one

     two

=====================================output=====================================
-    foo

    top level indented code block

---

- foo

  list item text

---

   -    foo

       top level indented code block

---

- foo

      indented code block in bullet

---

1.    foo

     top level indented code block

---

1.  foo

    list item text

---

   1.    foo

        top level indented code block

---

1.  foo

        indented code block in numbered item

---

-    [ ] foo

    top level indented code block

---

- [ ] foo

      indented code block in checkbox item

---

 -    item 1
 -    item 2

     top level indented code block

---

- item 1
  - item 1-1
  - item 1-2

  naive paragraph in item 1

---

-    item 1
     - item 1-1
     - item 1-2

    top level indented code block

---

   -    item 1
        - item 1-1
        - item 1-2
   -    item 2

       top level indented code block

---

1. item 1
   1. item 1-1
   2. item 1-2

   naive paragraph in item 1

---

1.   item 1
     1. item 1-1
     2. item 1-2
2.   item 1

    top level indented code block

---

-    item 1

     > quote

     text

    top level indented code block

---

-    item 1
     -    item 1-1
     -    item 1-2

         indented code block

    top level indented code block

---

 -    one

     two

================================================================================
`;

exports[`git-diff-friendly.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
5. abc
1. def
999. ghi

=====================================output=====================================
5. abc
1. def
1. ghi

================================================================================
`;

exports[`interrupt.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
* Something
### Some heading

=====================================output=====================================
- Something

### Some heading

================================================================================
`;

exports[`issue-7846.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
- a a  
   b b  
    c c  
   d d  
  e e

1.  a a a  
   b b b  
  c c c  
   d d d  
    e e e
=====================================output=====================================
- a a  
  b b  
  c c  
  d d  
  e e

1.  a a a  
    b b b  
    c c c  
    d d d  
    e e e

================================================================================
`;

exports[`issue-8004.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
- Level 1
  - Level 1-1

- Level 2

=====================================output=====================================
- Level 1
  - Level 1-1

- Level 2

================================================================================
`;

exports[`issue-17652.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
1. Some text, and code block below, with newline after code block

   \`\`\`yaml
   ---
   foo: bar
   \`\`\`

   1. Another
   2. List

1. Some text, and code block below, with newline after code block

   1. Another
   2. List


   \`\`\`yaml
   ---
   foo: bar
   \`\`\`

   1. Another
   2. List

=====================================output=====================================
1. Some text, and code block below, with newline after code block

   \`\`\`yaml
   ---
   foo: bar
   \`\`\`

   1. Another
   2. List

1. Some text, and code block below, with newline after code block

   1. Another
   2. List

   \`\`\`yaml
   ---
   foo: bar
   \`\`\`

   1. Another
   2. List

================================================================================
`;

exports[`issue-19644.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
- [x] short first line.

      second paragraph at six spaces that wraps
      onto another line here.

=====================================output=====================================
- [x] short first line.

      second paragraph at six spaces that wraps
      onto another line here.

================================================================================
`;

exports[`long-paragraph.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
- This is a long long long long long long long long long long long long long long paragraph.

=====================================output=====================================
- This is a long long long long long long long long long long long long long
  long paragraph.

================================================================================
`;

exports[`loose.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
- 123

  - abc

- 456

  - def

- 789

  - ghi

=====================================output=====================================
- 123

  - abc

- 456

  - def

- 789

  - ghi

================================================================================
`;

exports[`multiline.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
- 123
  456
  789

=====================================output=====================================
- 123 456 789

================================================================================
`;

exports[`nested.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
- Level 1
  - Level 2
    - Level 3

=====================================output=====================================
- Level 1
  - Level 2
    - Level 3

================================================================================
`;

exports[`nested-checkbox.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
* parent list item parent list item parent list item parent list item parent list item parent list item

     * child list item child list item child list item child list item child list item child list item

    paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph

* [x] parent task list item parent task list item parent task list item parent task list item

     * [x] child task list item child task list item child task list item child task list item

    paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph

=====================================output=====================================
- parent list item parent list item parent list item parent list item parent
  list item parent list item

  - child list item child list item child list item child list item child list
    item child list item

  paragraph paragraph paragraph paragraph paragraph paragraph paragraph
  paragraph paragraph

- [x] parent task list item parent task list item parent task list item parent
      task list item

  - [x] child task list item child task list item child task list item child
        task list item

  paragraph paragraph paragraph paragraph paragraph paragraph paragraph
  paragraph paragraph

================================================================================
`;

exports[`nested-tab.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
# List with 1 tab indentation and \`-\`
- Top level list item 1
- Top level list item 2
	- Nested List item 1
	- Nested List item 2
		- Sub-Nested List item 1
		- Sub-Nested List item 2

# List with 1 tab indentation and \`*\`
* Top level list item 1
* Top level list item 2
	* Nested List item 1
	* Nested List item 2
    	* Sub-Nested List item 1
    	* Sub-Nested List item 2

=====================================output=====================================
# List with 1 tab indentation and \`-\`

- Top level list item 1
- Top level list item 2
  - Nested List item 1
  - Nested List item 2
    - Sub-Nested List item 1
    - Sub-Nested List item 2

# List with 1 tab indentation and \`*\`

- Top level list item 1
- Top level list item 2
  - Nested List item 1
  - Nested List item 2
    - Sub-Nested List item 1
    - Sub-Nested List item 2

================================================================================
`;

exports[`ordered.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
1. 123
1. 456
1. 789

=====================================output=====================================
1. 123
1. 456
1. 789

================================================================================
`;

exports[`separate.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
- 123
- 123
- 123

* 123
* 123
* 123

=====================================output=====================================
- 123
- 123
- 123

* 123
* 123
* 123

================================================================================
`;

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
- 123
- 456
- 789

=====================================output=====================================
- 123
- 456
- 789

================================================================================
`;

exports[`start.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
5. abc
6. def
7. ghi

---

0. abc
0. def
0. ghi

---

1. abc
1. def
1. ghi

---

2. abc
2. def
2. ghi

---

0. abc
1. def
2. ghi

---

0. abc
1. def
1. ghi

---

1. abc
2. def
3. ghi

---

2. abc
3. def
4. ghi

---

999. abc
145. def
69. ghi

---

0. abc

---

1. abc

---

2. abc

---

999. abc

---

0. abc
1. def

---

1. abc
2. def

---


1. abc
1. def

---

2. abc
3. def

---

999. abc
1. def

---

999. abc
2. def

=====================================output=====================================
5. abc
6. def
7. ghi

---

0. abc
1. def
2. ghi

---

1. abc
1. def
1. ghi

---

2. abc
3. def
4. ghi

---

0. abc
1. def
2. ghi

---

0. abc
1. def
1. ghi

---

1. abc
2. def
3. ghi

---

2. abc
3. def
4. ghi

---

999. abc
1000. def
1001. ghi

---

0. abc

---

1. abc

---

2. abc

---

999. abc

---

0. abc
1. def

---

1. abc
2. def

---

1. abc
1. def

---

2. abc
3. def

---

999. abc
1. def

---

999. abc
1000. def

================================================================================
`;

exports[`tab.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
* Text

 	[title](link)

* Text

 	- foo
 	- foo
 	- bar

* Text

 	# foo

* Text

 	\`\`\`
 	foo
 	\`\`\`

* Text

 	\`foo\`

=====================================output=====================================
- Text

  [title](link)

- Text

  - foo
  - foo
  - bar

- Text

  # foo

- Text

  \`\`\`
  foo
  \`\`\`

- Text

  \`foo\`

================================================================================
`;

exports[`unordered.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
- first line
    - second line indented
- third line
    - fourth line
        - fifth line

=====================================output=====================================
- first line
  - second line indented
- third line
  - fourth line
    - fifth line

================================================================================
`;
